<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="16dp"
    android:orientation="vertical"
    android:background="#dad7d7"
    tools:context="com.example.tejakunderu.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textAlignment="center"
        android:textSize="22sp"
        android:textStyle="bold"
        android:text="@string/welcome_text" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1" >

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/patient_id_text"
            android:textSize="18sp" />

        <EditText android:id="@+id/patient_id_edit_text"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:hint="@string/patient_id_hint"
            android:textAlignment="center"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/patient_age_text"
            android:textSize="18sp" />

        <EditText android:id="@+id/patient_age_edit_text"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:hint="@string/patient_age_hint"
            android:textAlignment="center"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/patient_name_text"
            android:textSize="18sp" />

        <EditText android:id="@+id/patient_name_edit_text"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:hint="@string/patient_name_hint"
            android:textAlignment="center"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/patient_gender_text"
            android:textSize="18sp" />

        <RadioGroup
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content">

            <RadioButton android:id="@+id/patient_gender_button_male"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/gender_male"/>

            <RadioButton android:id="@+id/patient_gender_button_female"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/gender_female"/>

        </RadioGroup>

    </LinearLayout>

    <TextView android:id="@+id/error_message_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textSize="18sp"
        android:textAlignment="center"
        android:textColor="#f20404"
        android:visibility="invisible"
        android:text="@string/error_message"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#4d3fab"
        android:textColor="#FFFFFF"
        android:text="@string/next_page"
        android:onClick="nextPageAction"/>

</LinearLayout>
